// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CourtList > matches snapshot with a selected court 1`] = `
.c0 {
  position: absolute;
  left: 16px;
  top: 184px;
  bottom: 16px;
  z-index: 10;
  width: 300px;
  background: var(--pf-card);
  border: 1px solid var(--pf-border-soft);
  border-radius: var(--pf-radius-md);
  box-shadow: 0 2px 12px rgba(30, 45, 73, 0.18);
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.c1 {
  margin: 0;
  padding: 12px 16px;
  font-family: var(--pf-font-display);
  font-size: 1.1rem;
  letter-spacing: 0.02em;
  font-weight: 400;
  color: var(--pf-text);
  border-bottom: 1px solid var(--pf-border-soft);
  flex-shrink: 0;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
  overflow-y: auto;
  flex: 1;
}

.c3 {
  display: flex;
  gap: 12px;
  padding: 12px 16px;
  cursor: pointer;
  align-items: flex-start;
  transition: background 0.1s;
  border-bottom: 1px solid var(--pf-border-soft);
  background: transparent;
}

.c3:hover {
  background: var(--pf-surface);
}

.c11 {
  display: flex;
  gap: 12px;
  padding: 12px 16px;
  cursor: pointer;
  align-items: flex-start;
  transition: background 0.1s;
  border-bottom: 1px solid var(--pf-border-soft);
  background: var(--pf-ivory);
}

.c11:hover {
  background: var(--pf-ivory);
}

.c4 {
  flex-shrink: 0;
  width: 22px;
  height: 22px;
  border-radius: 50%;
  background: var(--pf-primary);
  color: var(--pf-card);
  font-size: 0.6875rem;
  font-weight: 700;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 1px;
}

.c12 {
  flex-shrink: 0;
  width: 22px;
  height: 22px;
  border-radius: 50%;
  background: var(--pf-primary-hover);
  color: var(--pf-card);
  font-size: 0.6875rem;
  font-weight: 700;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 1px;
}

.c5 {
  flex: 1;
  min-width: 0;
}

.c6 {
  margin: 0 0 2px;
  font-size: 0.875rem;
  font-weight: 700;
  color: var(--pf-text);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c7 {
  margin: 0 0 4px;
  font-size: 0.75rem;
  color: var(--pf-text-muted);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c8 {
  margin: 0 0 2px;
  font-size: 0.75rem;
  color: var(--pf-marigold);
}

.c9 {
  color: var(--pf-text-muted);
}

.c10 {
  margin: 0;
  font-size: 0.75rem;
  font-weight: 700;
  color: #3b6d11;
}

.c13 {
  margin: 0;
  font-size: 0.75rem;
  font-weight: 700;
  color: var(--pf-tomato);
}

@media (max-width: 640px) {
  .c0 {
    left: 0;
    right: 0;
    top: auto;
    bottom: 0;
    width: 100%;
    border-radius: 16px 16px 0 0;
    max-height: 45svh;
  }
}

<div>
  <div
    class="c0"
  >
    <h2
      aria-live="polite"
      class="c1"
    >
      3
       pickleball 
      courts
       
      nearby
    </h2>
    <ul
      class="c2"
    >
      <li
        class="c3"
      >
        <span
          class="c4"
        >
          1
        </span>
        <div
          class="c5"
        >
          <p
            class="c6"
          >
            City Pickleball Club
          </p>
          <p
            class="c7"
          >
            123 Main St, Springfield
          </p>
          <p
            class="c8"
          >
            ★ 
            4.5
            <span
              class="c9"
            >
               (
              127
              )
            </span>
          </p>
          <p
            class="c10"
          >
            Open now
          </p>
        </div>
      </li>
      <li
        class="c11"
      >
        <span
          class="c12"
        >
          2
        </span>
        <div
          class="c5"
        >
          <p
            class="c6"
          >
            Riverside Courts
          </p>
          <p
            class="c7"
          >
            456 Oak Ave, Springfield
          </p>
          <p
            class="c8"
          >
            ★ 
            3.8
            <span
              class="c9"
            >
               (
              42
              )
            </span>
          </p>
          <p
            class="c13"
          >
            Closed
          </p>
        </div>
      </li>
      <li
        class="c3"
      >
        <span
          class="c4"
        >
          3
        </span>
        <div
          class="c5"
        >
          <p
            class="c6"
          >
            Community Rec Center
          </p>
          <p
            class="c7"
          >
            789 Elm Blvd, Springfield
          </p>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`CourtList > matches snapshot with no selection 1`] = `
.c0 {
  position: absolute;
  left: 16px;
  top: 184px;
  bottom: 16px;
  z-index: 10;
  width: 300px;
  background: var(--pf-card);
  border: 1px solid var(--pf-border-soft);
  border-radius: var(--pf-radius-md);
  box-shadow: 0 2px 12px rgba(30, 45, 73, 0.18);
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.c1 {
  margin: 0;
  padding: 12px 16px;
  font-family: var(--pf-font-display);
  font-size: 1.1rem;
  letter-spacing: 0.02em;
  font-weight: 400;
  color: var(--pf-text);
  border-bottom: 1px solid var(--pf-border-soft);
  flex-shrink: 0;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
  overflow-y: auto;
  flex: 1;
}

.c3 {
  display: flex;
  gap: 12px;
  padding: 12px 16px;
  cursor: pointer;
  align-items: flex-start;
  transition: background 0.1s;
  border-bottom: 1px solid var(--pf-border-soft);
  background: transparent;
}

.c3:hover {
  background: var(--pf-surface);
}

.c4 {
  flex-shrink: 0;
  width: 22px;
  height: 22px;
  border-radius: 50%;
  background: var(--pf-primary);
  color: var(--pf-card);
  font-size: 0.6875rem;
  font-weight: 700;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 1px;
}

.c5 {
  flex: 1;
  min-width: 0;
}

.c6 {
  margin: 0 0 2px;
  font-size: 0.875rem;
  font-weight: 700;
  color: var(--pf-text);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c7 {
  margin: 0 0 4px;
  font-size: 0.75rem;
  color: var(--pf-text-muted);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c8 {
  margin: 0 0 2px;
  font-size: 0.75rem;
  color: var(--pf-marigold);
}

.c9 {
  color: var(--pf-text-muted);
}

.c10 {
  margin: 0;
  font-size: 0.75rem;
  font-weight: 700;
  color: #3b6d11;
}

.c11 {
  margin: 0;
  font-size: 0.75rem;
  font-weight: 700;
  color: var(--pf-tomato);
}

@media (max-width: 640px) {
  .c0 {
    left: 0;
    right: 0;
    top: auto;
    bottom: 0;
    width: 100%;
    border-radius: 16px 16px 0 0;
    max-height: 45svh;
  }
}

<div>
  <div
    class="c0"
  >
    <h2
      aria-live="polite"
      class="c1"
    >
      3
       pickleball 
      courts
       
      nearby
    </h2>
    <ul
      class="c2"
    >
      <li
        class="c3"
      >
        <span
          class="c4"
        >
          1
        </span>
        <div
          class="c5"
        >
          <p
            class="c6"
          >
            City Pickleball Club
          </p>
          <p
            class="c7"
          >
            123 Main St, Springfield
          </p>
          <p
            class="c8"
          >
            ★ 
            4.5
            <span
              class="c9"
            >
               (
              127
              )
            </span>
          </p>
          <p
            class="c10"
          >
            Open now
          </p>
        </div>
      </li>
      <li
        class="c3"
      >
        <span
          class="c4"
        >
          2
        </span>
        <div
          class="c5"
        >
          <p
            class="c6"
          >
            Riverside Courts
          </p>
          <p
            class="c7"
          >
            456 Oak Ave, Springfield
          </p>
          <p
            class="c8"
          >
            ★ 
            3.8
            <span
              class="c9"
            >
               (
              42
              )
            </span>
          </p>
          <p
            class="c11"
          >
            Closed
          </p>
        </div>
      </li>
      <li
        class="c3"
      >
        <span
          class="c4"
        >
          3
        </span>
        <div
          class="c5"
        >
          <p
            class="c6"
          >
            Community Rec Center
          </p>
          <p
            class="c7"
          >
            789 Elm Blvd, Springfield
          </p>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
